--- a/index.html
+++ b/index.html
@@ -134,16 +134,20 @@
                         <h2 class="heading">Experiencia Laboral</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Co-Founder & Lead Developer - <span class="place"><a href="#">Startup Hub</a></span> <span class="year">(2014 - Present)</span></h3>
-                                <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+                                <h3 class="title">Fundador y Desarrollador - <span class="place"><a href="http://mundofuturo.com.ve/">Mundo Futuro C.A.</a></span> <span class="year">(2015 - Presente)</span></h3>
+                                <p>Creacion de la empresa Mundo Futuro C.A., encargada de desarrollo y diseño web</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">Google</a></span> <span class="year">(2013 - 2014)</span></h3>
-                                <p>Vivamus a tortor eu turpis pharetra consequat quis non metus. Aliquam aliquam, orci eu suscipit pellentesque, mauris dui tincidunt enim. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.</p>
+                                <h3 class="title">Desarrollador FrontEnd - <span class="place"><a href="https://github.com/CrafterSama/CrafterSama-Studio">CrafterSama Studio</a></span> <span class="year">(2014 - 2015)</span></h3>
+                                <p>Desarrollo de interfaces y sitios web a partir del mock Up realizado por el diseñador de la empresa</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Software Engineer - <span class="place"><a href="#">eBay</a></span> <span class="year">(2012 - 2013)</span></h3>
-                                <p>Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.</p>
+                                <h3 class="title">Analista de Soporte Técnico - <span class="place"><a href="http://grupoiceo.com.ve/">Grupo ICEO C.A.</a></span> <span class="year">(2013 - 2014)</span></h3>
+                                <p>Encargado de el buen funcionamiento y mantenimiento preventivo de todos los equipos de computacion de la empresa y redaccion de informes tecnicos acerca del desenvolvimiento de los equipos</p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title">Tecnico de Soporte - <span class="place"><a href="#">Solventar C.A.</a></span> <span class="year">(2012 - 2013)</span></h3>
+                                <p>Encargado del mantenimiento correctivo y preventivo de todo los equipos ccomputacion e impresion de la empresa.</p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -163,9 +167,9 @@
                         <h2 class="heading sr-only">Informacion Basica</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Maracaibo, Zulia, VE</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Maracaibo, Zulia, VE</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">mundofuturoca@gmail.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Website:</span><a href="#">http://www.mundofuturo.com.ve</a></li>
+                                <li><i class="fa fa-link"></i><span class="sr-only">Sitio Web:</span><a href="#">http://www.mundofuturo.com.ve</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -317,30 +321,8 @@
                         <h2 class="heading">Conferencias</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-calendar"></i> <a href="https://developer.apple.com/wwdc/" target="_blank">WWDC 2014</a> (San Francisco)</li>
-                                <li><i class="fa fa-calendar"></i> <a href="http://hive.aigaseattle.org/">Hive</a> (Seattle)</li>
+                                <li><i class="fa fa-calendar"></i> <a href="https://www.instagram.com/p/BHPXCuBhvgk/?taken-by=infourbe" target="_blank">Marketing 3.0 - 2016</a>(URBE Maracaibo)</li>
                             </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
-                <aside class="credits aside section">
-                    <div class="section-inner">
-                        <h2 class="heading">Creditos</h2>
-                        <div class="content">
-                            <ul class="list-unstyled">
-                                <li><a href="http://getbootstrap.com/" target="_blank"><i class="fa fa-external-link"></i> Bootstrap 3.2</a></li>
-                                <li><a href="http://fortawesome.github.io/Font-Awesome/" target="_blank"><i class="fa fa-external-link"></i> FontAwsome 4.1</a></li>
-                                <li><a href="http://jquery.com/" target="_blank"><i class="fa fa-external-link"></i> jQuery</a></li>
-                                <li><a href="http://caseyscarborough.com/projects/github-activity/" target="_blank"><i class="fa fa-external-link"></i> GitHub Activity Stream</a></li>
-                                <li><a href="https://github.com/sdepold/jquery-rss" target="_blank"><i class="fa fa-external-link"></i> jQuery RSS</a></li>
-                                <li>Profile image: <a href="https://www.flickr.com/photos/dotbenjamin/2577394151" target="_blank">Ben Smith</a></li>
-                                <li>iPad and iPhone mocks: <a href="https://dribbble.com/perlerar" target="_blank">Regy Perlera</a></li>
-                            </ul>
-                            <hr/>
-                             <p>This responsive HTML5 CSS3 site template is handcrafted by UX designer <a href="https://www.linkedin.com/in/xiaoying" target="_blank">Xiaoying Riley</a> at <a href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a> for developers and is <strong>FREE</strong> under the <a class="dotted-link" href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 License</a></p>
-                             <p>We will improve or add new features to this template based on users' feedback so follow us on twitter to get notified when a new version is out!</p>
-                            <a class="btn btn-cta-secondary btn-follow" href="https://twitter.com/3rdwave_themes" target="_blank"><i class="fa fa-twitter"></i> Follow us</a>
-                            <a class="btn btn-cta-primary btn-download" href="http://themes.3rdwavemedia.com/website-templates/free-responsive-website-template-for-developers/" target="_blank"><i class="fa fa-download"></i> I want to download</a>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
