Se agrego modifico el boton de contacto y se coloco descargar cv, tam bien se agrego una carpeta en assets llamada documents donde se agrego el curriculum en pdf

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="https://www.instagram.com/amarillo_cel" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 </ul>
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="#" target="_blank"><i class="fa fa-paper-plane"></i>Contactame</a>
+            <a class="btn btn-cta-primary pull-right" href="./assets/documents/CV_Carlos_Ferrer.pdf" target="_blank"><i class="fa fa-paper-plane"></i>Descargar CV</a>
         </div><!--//container-->
     </header><!--//header-->
     <div class="container sections-wrapper">
