Se actualizo la la ubicacion y se actualizo el curriculum en pdf, tambien se redireccionaron los proyectos a su direccion en github

--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
                                 <img class="img-responsive project-image" src="assets/images/projects/project-1.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://www.behance.net/gallery/29349785/Grupo-ICEO-(Agency)" target="_blank">Grupo ICEO - Agency</a></h3>
+                                    <h3 class="title"><a href="https://acenaga.github.io/iceo-agency/" target="_blank">Grupo ICEO - Agency</a></h3>
                                     <p>Pagina presentada a la empresa Grupo ICEO, la cual se elaboro a partir de una plantilla de libre uso llamada "Agency", la misma esta elaborada con bootstrap, de esa forma se realizaron las modificaciones pertinentes hasta quedar a gusto del cliente. La Pagina esta offline en este momento</p>
-                                    <p><a class="more-link" href="https://www.behance.net/gallery/29349785/Grupo-ICEO-(Agency)" target="_blank"><i class="fa fa-external-link"></i>Portafolio</a></p>
+                                    <p><a class="more-link" href="https://acenaga.github.io/iceo-agency/" target="_blank"><i class="fa fa-external-link"></i>Portafolio</a></p>
                                 </div><!--//desc-->
                             </div><!--//item-->
                             <div class="item row">
-                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.behance.net/gallery/29350777/Amantes-del-Celuloide-(En-construccion)" target="_blank">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://acenaga.github.io/amantes-del-celuloide/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-2.png" alt="project name" />
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="https://www.behance.net/gallery/29350777/Amantes-del-Celuloide-(En-construccion)" target="_blank">Amantes del Celuloide - en construccion</a></h3>
+                                    <h3 class="title"><a href="https://acenaga.github.io/amantes-del-celuloide/" target="_blank">Amantes del Celuloide - en construccion</a></h3>
                                     <p> Blog de noticias del cine, realizado para los amantes del septimo arte, se utilizo una plantilla llamada "Nova" y se modifico segun los requerimientos del cliente, proyecto actualmente en construccion.</p>
                                     <p><a class="more-link" href="https://www.behance.net/gallery/29350777/Amantes-del-Celuloide-(En-construccion)" target="_blank"><i class="fa fa-external-link"></i> Portafolio</a></p>
                                 </div><!--//desc-->
@@ -167,7 +167,7 @@
                         <h2 class="heading sr-only">Informacion Basica</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Maracaibo, Zulia, VE</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Ciudad de Panamá, Panamá, PTY</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">mundofuturoca@gmail.com</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Sitio Web:</span><a href="#">http://www.mundofuturo.com.ve</a></li>
                             </ul>
