--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="section-inner">
                         <h2 class="heading">Acerca de mi</h2>
                         <div class="content">
-                            <p>Desarrollador web en constante crecimiento, con conocimientos de html5, css3, javascript, jquery, php y mysql. Con la capacidad de crear aplicaciones web para facilitar los requerimientos de cualquier empresa que quiera empezar a tomar las Tecnonoligas de Informacion y Comunicacion en su dia a dia.</p>
+                            <p>Desarrollador web en constante crecimiento, con conocimientos de html5, css3, javascript, jquery, php y mysql. Con la capacidad de crear aplicaciones web para facilitar los requerimientos de cualquier empresa que quiera empezar a tomar las Tecnológicas de Información y Comunicación en su día a día.</p>
                             <p>Amplia experiencia en el area de soporte tecnico, creando comptencias en los campos de mantenimiento preventivo y correctivo de equipos de computacion, analisis de situacion para tomar la opcion mas conveniente en el caso de crecimiento en el area de las TIC's.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
