se agrego la red social de github

--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/acenaga" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://plus.google.com/+CarlosAmarilloFerrer" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                    <li><a href="https://www.instagram.com/amarillo_cel" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://ve.linkedin.com/in/carlos-alberto-ferrer-boscan-9aa5ab24" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/amarillo69" target="_blank"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://www.behance.net/acenaga" target="_blank"><i class="fa fa-behance"></i></a></li>
-                    <li><a href="https://www.instagram.com/amarillo_cel" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://github.com/acenaga" target="_blank"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div><!--//profile-->
             <a class="btn btn-cta-primary pull-right" href="./assets/documents/CV_Carlos_Ferrer.pdf" target="_blank"><i class="fa fa-paper-plane"></i>Descargar CV</a>
@@ -347,5 +348,4 @@
     <!-- custom js -->
     <script type="text/javascript" src="assets/js/main.js"></script>
 </body>
-</html> 
-
+</html>
