--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="p:domain_verify" content="08c9686f603146888d86fb8871577f49"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Landing page de presentacion personal de Carlos Ferrer">
     <meta name="author" content="Carlos Ferrer">
