Se corrigio la expresion back end y front end, se agrego laravel a los conocimientos y habilidades

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="profile-content pull-left">
                 <h1 class="name">Carlos A. Ferrer B.</h1>
                 <h2 class="desc">Desarrollador Web</h2>
-                <h2 class="desc">Front end and Back end Developer</h2>
+                <h2 class="desc">Front end & Back end Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/acenaga" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://plus.google.com/+CarlosAmarilloFerrer" target="_blank"><i class="fa fa-google-plus"></i></a></li>
@@ -213,6 +213,14 @@
                                     <h3 class="level-title">Bootstrap<span class="level-label">Medio</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="65%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Laravel<span class="level-label">Medio</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="35%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
