se corrigio el redireccionamiento de una imagen de la parte de proyectos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+    <div class="matrix">
+        <canvas id="canvas"></canvas>
+    </div>
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container">
@@ -69,23 +72,63 @@
                         <h2 class="heading">Ultimos Proyectos</h2>
                         <div class="content">
                             <div class="item featured text-center">
-                                <h3 class="title"><a href="http://mundofuturo.com.ve/" target="_blank">Blog Mundo Futuro</a></h3>
-                                <p class="summary">Plantilla de Wordpress para el blog Mundo Futuro</p>
+                                <h3 class="title"><a href="http://www.lilahyoga.com/" target="_blank">Lilah Yoga</a></h3>
+                                <p class="summary">Refrescamiento de Imagen, segun bocetos del diseñador</p>
                                 <div class="featured-image">
-                                    <a href="http://mundofuturo.com.ve/" target="_blank">
+                                    <a href="http://www.lilahyoga.com/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="project name" />
                                     </a>
                                     <div class="ribbon">
-                                        <div class="text">Template</div>
+                                        <div class="text">Refresh</div>
                                         </div>
                                     </div>
                                 <div class="desc text-left">
-                                    <p>Creacion de una plantilla de wordpress creada desde cero, para el blog Mundo Futuro</p>
-                                    <p>La plantilla es responsaiva y fue creada usando una maquetacion desde photoshop y luego llevandola de forma estatica en html, para luego integrarla con Wordpress y crear el dinamismo de la plantilla</p>
+                                    <p>Refrescamiento del sitio de yoga Lilah, en base a bocetos facilitados por el diseñador</p>
+                                    <p>La pagina esta hecha en wordpress, se procedio a trabajar con un template y se modifico segun los requerimientos de el diseñador y la dueña del sitio</p>
                                 </div><!--//desc-->
-                                <a class="btn btn-cta-secondary" href="https://www.behance.net/gallery/36674049/Plantilla-de-WordPress-del-Blog-Mundo-Futuro" target="_blank"><i class="fa fa-thumbs-o-up"></i>Portafolio</a>
+                                <a class="btn btn-cta-secondary" href="#" target="_blank"><i class="fa fa-thumbs-o-up"></i>Portafolio</a>
                             </div><!--//item-->
                             <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.activegear.co/pages/instant-connect" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project-8.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://www.activegear.co/pages/instant-connect" target="_blank">ActiveGear - Desarrollo de la pagina de instant connect</a></h3>
+                                    <p>Desarrollo de la pagina de instant connect en base a los mock up del diseñador</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Portafolio</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.activegear.co/pages/warranty" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project-7.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://www.activegear.co/pages/warranty" target="_blank">ActiveGear - Desarrollo de la pagina de warranty</a></h3>
+                                    <p>Desarrollo de la pagina de warranty en base a los mock up del diseñador</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Portafolio</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.venture4th.co/instant-connect" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project-6.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://www.venture4th.co/instant-connect" target="_blank">Venture 4th - Desarrollo de la pagina de instant-connect</a></h3>
+                                    <p>Desarrollo de la pagina de instant-connect en base a los mock up del diseñador</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Portafolio</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.venture4th.co/warranty" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project-5.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://www.venture4th.co/warranty" target="_blank">Venture 4th - Desarrollo de la pagina de garantia</a></h3>
+                                    <p>Desarrollo de la pagina de garantia en base a los mock up del diseñador</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i> Portafolio</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://cariocaactivewear.com/" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-4.png" alt="project name" />
@@ -136,7 +179,11 @@
                         <h2 class="heading">Experiencia Laboral</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Fundador y Desarrollador - <span class="place"><a href="http://mundofuturo.com.ve/">Mundo Futuro C.A.</a></span> <span class="year">(2015 - Presente)</span></h3>
+                                <h3 class="title">Desarrollador Back End - <span class="place"><a href="http://mundo-futuo.com/">Global Techonologies System</a></span> <span class="year">(2016 - Presente)</span></h3>
+                                <p>Configuracion y mantenimiento de servidores Privados (VPS), con nginx como servidor web, desarrollo de paginas de ventas con conexion al CRM Konnektive, mantenimiento de la pagina  <span class="place"><a href="https://panama-gbs.com/">panama-gbs.com</a></span></p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title">Fundador y Desarrollador - <span class="place"><a href="http://mundo-futuro.com/">Mundo Futuro C.A.</a></span> <span class="year">(2015 - Presente)</span></h3>
                                 <p>Creacion de la empresa Mundo Futuro C.A., encargada de desarrollo y diseño web</p>
                             </div><!--//item-->
                             <div class="item">
@@ -171,7 +218,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Ciudad de Panamá, Panamá, PTY</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">mundofuturoca@gmail.com</a></li>
-                                <li><i class="fa fa-link"></i><span class="sr-only">Sitio Web:</span><a href="#">http://www.mundofuturo.com.ve</a></li>
+                                <li><i class="fa fa-link"></i><span class="sr-only">Sitio Web:</span><a href="#">http://www.mundo-futuro.com</a></li>
                             </ul>
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -315,7 +362,7 @@
                 </aside><!--//section-->
                 <aside class="list music aside section">
                     <div class="section-inner">
-                        <h2 class="heading">musica favorita para programar</h2>
+                        <h2 class="heading">Musica favorita para programar</h2>
                         <div class="content">
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-headphones"></i> <a href="https://www.youtube.com/watch?v=OPf0YbXqDm0" target="_blank">Mark Ronson - Uptown Funk ft. Bruno Mars</a></li>
@@ -351,6 +398,7 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery.smoove.js"></script>
+    <script type="text/javascript" src="assets/plugins/matrix.js"></script>
     <!-- github activity plugin -->
     <script type="text/javascript" src="assets/plugins/github-activity/js/mustache.min.js"></script>
     <script type="text/javascript" src="assets/plugins/github-activity/js/github-activity-0.1.4.min.js"></script>
