--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <h2 class="heading sr-only">Informacion Basica</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Ciudad de Panamá, Panamá, PTY</li>
+                                <li><i class="fa fa-map-marker"></i><span class="sr-only">Ubicacion:</span>Ciudad Autónoma de Buenos Aires, Argentina</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="#">mundofuturoca@gmail.com</a></li>
                                 <li><i class="fa fa-link"></i><span class="sr-only">Sitio Web:</span><a href="#">http://www.mundo-futuro.com</a></li>
                             </ul>
