Se corrigio el contenido de perfil, se cambio la foto de perfil y se agrego un nuevo proyecto

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <h2 class="desc">Front end & Back end Developer</h2>
                 <ul class="social list-inline">
                     <li><a href="https://twitter.com/acenaga" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://plus.google.com/+CarlosAmarilloFerrer" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                     <li><a href="https://www.instagram.com/amarillo_cel" target="_blank"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://ve.linkedin.com/in/carlos-alberto-ferrer-boscan-9aa5ab24" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/amarillo69" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -62,8 +61,8 @@
                     <div class="section-inner">
                         <h2 class="heading">Acerca de mi</h2>
                         <div class="content">
-                            <p>Desarrollador web en constante crecimiento, con conocimientos de html5, css3, javascript, jquery, php y mysql. Con la capacidad de crear aplicaciones web para facilitar los requerimientos de cualquier empresa que quiera empezar a tomar las Tecnológicas de Información y Comunicación en su día a día.</p>
-                            <p>Amplia experiencia en el área de soporte técnico, creando competencias en los campos de mantenimiento preventivo y correctivo de equipos de computación, análisis de situación para tomar la opción mas conveniente en el caso de crecimiento en el área de las TIC's.</p>
+                            <p>Desarrollador web con capacidad de crear aplicaciones web que cumplan con los requerimientos del negocio de empresas y emprendimientos.</p>
+                            <p>Conocimientos en el área de soporte técnico a nivel preventivo y correctivo. Competencias para el trabajo  en equipo, atención al cliente y desarrollo de procesos de innovación.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -89,6 +88,16 @@
                                 <a class="btn btn-cta-secondary" href="#" target="_blank"><i class="fa fa-thumbs-o-up"></i>Portafolio</a>
                             </div><!--//item-->
                             <hr class="divider" />
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://invertacoimport.com/" target="_blank">
+                                <img class="img-responsive project-image" src="assets/images/projects/project-9.png" alt="project name" />
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://invertacoimport.com/" target="_blank">Invertaco S.A. - Desarrollo del website de Invertaco</a></h3>
+                                    <p>Desarrollo de la pagina de Invertaco en base a los mock up del diseñador</p>
+                                    <p><a class="more-link" href="#" target="_blank"><i class="fa fa-external-link"></i>Portafolio</a></p>
+                                </div><!--//desc-->
+                            </div><!--//item-->
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="https://www.activegear.co/pages/instant-connect" target="_blank">
                                 <img class="img-responsive project-image" src="assets/images/projects/project-8.png" alt="project name" />
@@ -228,7 +237,7 @@
                         <h2 class="heading">Habilidades</h2>
                         <div class="content">
                             <p class="intro">
-                                Como desarrolador web, estoy en constante desarrollo de mis habilidades, y como soportista tecnico tengo una gran experiencia.</p>
+                                Como desarrollador web, estoy en constante desarrollo de mis habilidades, y como soportista tecnico tengo una gran experiencia.</p>
 
                             <div class="skillset">
 
