se actualizo todas las experiencias laborales

--- a/index.html
+++ b/index.html
@@ -188,24 +188,25 @@
                         <h2 class="heading">Experiencia Laboral</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Desarrollador Back End - <span class="place"><a href="http://mundo-futuo.com/">Global Techonologies System</a></span> <span class="year">(2016 - Presente)</span></h3>
-                                <p>Configuracion y mantenimiento de servidores Privados (VPS), con nginx como servidor web, desarrollo de paginas de ventas con conexion al CRM Konnektive, mantenimiento de la pagina  <span class="place"><a href="https://panama-gbs.com/">panama-gbs.com</a></span></p>
+                                <h3 class="title">Desarrollador Web y Soportista Técnico <span class="place">Ejercicio Independiente</a></span> <span class="year">May 2007 – Actualidad </span></h3>
+                                <p>Desarrollos web, configuración de VPS, mantenimiento, configuración de dominios y hosting de diversos portales.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Fundador y Desarrollador - <span class="place"><a href="http://mundo-futuro.com/">Mundo Futuro C.A.</a></span> <span class="year">(2015 - Presente)</span></h3>
-                                <p>Creacion de la empresa Mundo Futuro C.A., encargada de desarrollo y diseño web</p>
+                                <h3 class="title">Desarrollador FrontEnd y BackEnd <span class="place">Global Technology Systems.</span> <span class="year">Feb 2017 – Mar 2019 </span></h3>
+                                <p>Contratación, configuración y puesta a punto de VPS para desarrollos web. Mantenimiento y pruebas de servidores. Creación de portales para E-Commerce con CRM Konnektive y HasOffers. Reportes y proyecciones de ventas de los diversos portales. Monitoreo y control del desempeño de los portales.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Desarrollador FrontEnd - <span class="place"><a href="https://github.com/CrafterSama/CrafterSama-Studio">CrafterSama Studio</a></span> <span class="year">(2014 - 2015)</span></h3>
-                                <p>Desarrollo de interfaces y sitios web a partir del mock Up realizado por el diseñador de la empresa</p>
+                                <h3 class="title">Desarrollador FrontEnd <span class="place">CrafterSama Studio></span> <span class="year">Ago 2014 – Nov 2016</span></h3>
+                                <p>Maquetación de páginas web acorde al mock up del diseñador. Entrevistas con clientes para el establecimiento de requisitos. Asistencia técnica ante incidencias en la fase de producción de páginas.
+                                </p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Analista de Soporte Técnico - <span class="place"><a href="http://grupoiceo.com.ve/">Grupo ICEO C.A.</a></span> <span class="year">(2013 - 2014)</span></h3>
-                                <p>Encargado de el buen funcionamiento y mantenimiento preventivo de todos los equipos de computacion de la empresa y redaccion de informes tecnicos acerca del desenvolvimiento de los equipos</p>
+                                <h3 class="title">Analista de Soporte Técnico <span class="place">Grupo ICEO C.A.</span> <span class="year">Feb 2012 – May 2014</span></h3>
+                                <p>Creación del departamento de soporte técnico. Implementación de procesos de planificación y control para el desarrollo de mantenimientos, actualizaciones de los equipos y paquetes de software, así como asistencia a los usuarios. Realizar informe y presentación de resultados</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Tecnico de Soporte - <span class="place"><a href="#">Solventar C.A.</a></span> <span class="year">(2012 - 2013)</span></h3>
-                                <p>Encargado del mantenimiento correctivo y preventivo de todo los equipos ccomputacion e impresion de la empresa.</p>
+                                <h3 class="title">Técnico de Soporte  <span class="place">Solventar C.A.</span> <span class="year">May 2008 – May 2009</span></h3>
+                                <p>Instalación, pruebas, mantenimiento y actualización de los equipos y programas de software. Brindar asistencia a los clientes internos con las incidencias en el uso de productos y aplicaciones. Llevar indicadores de resultados y realizar informes técnicos.</p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
