Corregidos detalles de redaccion en experiencia laboral

--- a/index.html
+++ b/index.html
@@ -205,28 +205,46 @@
                         <h2 class="heading">Experiencia Laboral</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Full Stack Mobile<span class="place"> Ejercicio Independiente</a></span> <span class="year">Nov - 2019 – Actualidad </span></h3>
+                                <h3 class="title">Full Stack Mobile // 
+                                    <span class="place"> Quilsoft S.A. // Argentina // </span> 
+                                    <span class="year">Nov - 2019 – Actualidad </span>
+                                </h3>
                                 <p>Desarrollo de aplicaciones móviles (Hibridas), usando el framework Ionic (Angular), realizando el Backend con el framework laravel (ver. 5.8). Se desarrollan interfaces en base a mockup elaborados por el diseñador a partir de un template elegido por el.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Desarrollador Web y Soportista Técnico <span class="place">Ejercicio Independiente</a></span> <span class="year">May 2007 – Actualidad </span></h3>
+                                <h3 class="title">Desarrollador Web y Soportista Técnico //
+                                    <span class="place"> Venezuela, Panama, Argentina // Ejercicio Independiente // </span>
+                                    <span class="year">May 2007 – Actualidad </span>
+                                </h3>
                                 <p>Desarrollos web, configuración de VPS, mantenimiento, configuración de dominios y hosting de diversos portales.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Desarrollador FrontEnd y BackEnd <span class="place">Global Technology Systems.</span> <span class="year">Feb 2017 – Mar 2019 </span></h3>
+                                <h3 class="title">Desarrollador FrontEnd y BackEnd //
+                                    <span class="place">Global Technology System // Panama.</span> 
+                                    <span class="year">Feb 2017 – Mar 2019 </span>
+                                </h3>
                                 <p>Contratación, configuración y puesta a punto de VPS para desarrollos web. Mantenimiento y pruebas de servidores. Creación de portales para E-Commerce con CRM Konnektive y HasOffers. Reportes y proyecciones de ventas de los diversos portales. Monitoreo y control del desempeño de los portales.</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Desarrollador FrontEnd <span class="place">CrafterSama Studio></span> <span class="year">Ago 2014 – Nov 2016</span></h3>
+                                <h3 class="title">Desarrollador FrontEnd // 
+                                    <span class="place">CrafterSama Studio // Venezuela // </span> 
+                                    <span class="year">Ago 2014 – Nov 2016</span>
+                                </h3>
                                 <p>Maquetación de páginas web acorde al mock up del diseñador. Entrevistas con clientes para el establecimiento de requisitos. Asistencia técnica ante incidencias en la fase de producción de páginas.
                                 </p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Analista de Soporte Técnico <span class="place">Grupo ICEO C.A.</span> <span class="year">Feb 2012 – May 2014</span></h3>
+                                <h3 class="title">Analista de Soporte Técnico // 
+                                    <span class="place"> Grupo ICEO C.A. // Venezuela // </span> 
+                                    <span class="year">Feb 2012 – May 2014</span>
+                                </h3>
                                 <p>Creación del departamento de soporte técnico. Implementación de procesos de planificación y control para el desarrollo de mantenimientos, actualizaciones de los equipos y paquetes de software, así como asistencia a los usuarios. Realizar informe y presentación de resultados</p>
                             </div><!--//item-->
                             <div class="item">
-                                <h3 class="title">Técnico de Soporte  <span class="place">Solventar C.A.</span> <span class="year">May 2008 – May 2009</span></h3>
+                                <h3 class="title">Técnico de Soporte // 
+                                    <span class="place">Solventar C.A. // Venezuela // </span> 
+                                    <span class="year">May 2008 – May 2009</span>
+                                </h3>
                                 <p>Instalación, pruebas, mantenimiento y actualización de los equipos y programas de software. Brindar asistencia a los clientes internos con las incidencias en el uso de productos y aplicaciones. Llevar indicadores de resultados y realizar informes técnicos.</p>
                             </div><!--//item-->
                         </div><!--//content-->
